--- a/app/src/App.css
+++ b/app/src/App.css
@@ -1,38 +1,28 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  width: 80%;
+  height: 100%;
+  flex-wrap: wrap;
 }
 
-.App-link {
-  color: #61dafb;
+.cardBody{
+  display: flex;
+  justify-content: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.card {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  flex: 2;
+  padding: 20px;
+  margin: 10px;
+  border: 1px solid lightgray;
+}
+
+.flag{
+  height: 100px;
+  width: 100px;
 }
